--- a/output.css
+++ b/output.css
@@ -657,6 +657,11 @@ video {
   background-color: rgb(0 105 113 / var(--tw-bg-opacity));
 }
 
+.bg-light-grey{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-orange{
   --tw-bg-opacity: 1;
   background-color: rgb(226 134 37 / var(--tw-bg-opacity));
@@ -679,10 +684,6 @@ video {
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
 }
 
 .font-lexend{
@@ -733,10 +734,6 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.opacity-5{
-  opacity: 0.05;
 }
 
 .opacity-75{
@@ -798,10 +795,6 @@ video {
   .md\:py-0{
     padding-top: 0px;
     padding-bottom: 0px;
-  }
-
-  .md\:pt-0{
-    padding-top: 0px;
   }
 }
 
