--- a/output.css
+++ b/output.css
@@ -690,6 +690,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.text-center{
+  text-align: center;
+}
+
 .font-lexend{
   font-family: Lexend Deca, sans-serif;
 }
@@ -742,6 +746,10 @@ video {
 
 .opacity-75{
   opacity: 0.75;
+}
+
+.opacity-0{
+  opacity: 0;
 }
 
 .transition{
